# beshell0.2

./: .gitignore  .gitmodules  1.0.0.tar  CMakeLists.txt  Makefile  README-DOCS.md  README-dfu.md  README-lvgl.md  README-quickjs.md  README.md  build.bat  build.sh  changelog.md  changlog.md  log.txt  package.json  sdkconfig  sdkconfig-esp32  sdkconfig-esp32s3  sdkconfig.old  trace  xxxxx.cc
components/littlefs/: CMakeLists.txt
components/littlefs/include/: esp_littlefs.h
components/littlefs/src/: esp_littlefs.c  littlefs_api.c  littlefs_api.h
components/mongoose/: CMakeLists.txt  json-build.c  json.c  json.h  mongoose.c  mongoose.h
components/quickjs/: CMakeLists.txt  component.mk  cutils.h  hello.c  quickjs-libc.c  quickjs-libc.h  quickjs.c  quickjs.h
main/: CMakeLists.txt  be_list.c  be_list.h  beshell.h  component.mk  debug.c  debug.h  eventloop.c  eventloop.h  http_server.c  http_server.h  js_main_loop.c  js_main_loop.h  list.c  list.h  logging.h  main.c  main.c-  malloc_funcs.c  malloc_funcs.h  mallocf.c  mallocf.h  native_fs.c  native_fs.h  package.h  protocol.c  protocol.h  psram.c  psram.h  rawfs.c  rawfs.h  root.raw  sniffer.c  sniffer.h  stack.c  stack.h  task_js.c  task_js.h  telnet.c  telnet.h  (+7 more)
main/anchor9/: anchor9.c  anchor9.h  anchor9_lvgl.c  anchor9_lvgl.h
main/arduino/: esp32-hal-gpio.h
main/arduino.bak/: esp32-hal-gpio.c
main/backup/: protocol.c  protocol.h
main/encoding/: gbk.c  gbk.h
main/font/: s16.c
main/gameplayer/: encoding.c  encoding.h  gameplayer.c  gameplayer.h  joypad_driver.c  joypad_driver.h  player_nofrendo.c  player_nofrendo.h  video_audio.c
main/gameplayer/nofrendo/: bitmap.c  log.c  memguard.c  nofrendo.c  noftypes.h  vid_drv.h
main/gameplayer/player_gnuboy/: display_gb.c  gamepad.h  player_gnuboy.c  player_gnuboy.h
main/led/: ease.c  ease.h
main/led/rainbow/: led_strip.h  led_strip_rmt_ws2812.c  led_strip_timeline.c
main/lv_demo_music/: lv_demo_music.h  lv_demo_music_main.c
main/media/: vfs_stream.c  vfs_stream.h
main/media/TinySoundFont/: tml.c  tml.h  tsf.c  tsf.h
main/media/audio_stream/: audio_stream.h  el.c  el_i2s.c  el_midi_msg.c  el_midi_render.c  el_mp3.c  el_spi_keyboard.c  el_src.c  midi_keys.h  pipe.c  player_midi.c  player_music.c
main/media/bak/: mp3_decoder.cpp  mp3_decoder.h  pgmspace.h  pwm_audio.c  vfs_stream.c
main/media/tjpgd/: tjpg.c  tjpg.h
main/modules/: js_class_utils.h  module_bt.c  module_bt.h  module_camera.c  module_camera.h  module_drivers.c  module_drivers.h  module_events.c  module_events.h  module_fs.c  module_fs.h  module_gameplayer.c  module_gpio.c  module_gpio.h  module_http.c  module_http.h  module_media.c  module_media.c.adf  module_media.c.bak  module_media.c.hexli  module_media.c.pingpong  module_media.c.ring  module_metadata.c  module_metadata.h  module_mg.c  module_mg.h  module_nvs.c  module_nvs.h  module_process.c  module_process.h  module_raw.h  module_serial.c  module_serial.h  module_socks.c  module_socks.h  module_utils.c  module_utils.h  module_wifi.c  module_wifi.h
main/modules/backup/: driver_stepper_mcpwm.c  driver_stepper_mcpwm.h  module_media.c.adf  module_media.c.bak  module_media.c.hexli  module_media.c.pingpong  module_media.c.ring
main/modules/driver/: driver_camera.c  driver_camera.h  driver_common.c  driver_common.h  driver_rainbow.c  driver_rainbow.h  driver_rmt.c  driver_rmt.h  driver_stepper.c  driver_stepper.h  driver_stepper_timer.c  driver_stepper_timer.h  module_driver.c  module_driver.h  pulse_cnt.c
main/modules/http/: http_req.c  http_route.c  module_http.c  module_http.h
main/modules/lvgl/: be_gl.c  be_gl.h  be_gl_js.c  be_gl_js.h  be_lv_draggable.c  be_lv_draggable.h  be_lv_struct_wrapper.c  be_lv_struct_wrapper.h  display.c  display.h  display_ws.c  display_ws.h  indev.c  indev.h  indev_i2c.c  indev_i2c.h  indev_pointer.c  indev_pointer.h  lv_conf.h  lv_obj_init.js  lv_obj_init.js.c  lv_obj_init.js.h  module_lvgl.c  module_lvgl.h  remote_video_stream.c  remote_video_stream.h  style.c  style.h  weather_image.h  weather_old_image_1.h  websocket_driver.c  websocket_driver.h  widgets.c  widgets.h  widgets_extra.c  widgets_extra.h  widgets_gen.c  widgets_gen.h
main/modules/media/: js_player_midi.c  js_player_midi.h  js_player_music.c  js_player_music.h  module_media.c  module_media.h
main/modules/mg/: mg_client.c  mg_client.h  mg_request.c  mg_request.h  mg_response.c  mg_response.h  mg_server.c  mg_server.h  module_mg.c  module_mg.h
main/modules/serial/: module_serial.c  module_serial.h  module_serial_i2c.c  module_serial_i2c.h  module_serial_i2s.c  module_serial_i2s.h  module_serial_spi.c  module_serial_spi.h  module_serial_uart.c  module_serial_uart.h
main/modules/src.js/: events.js  events.js.h
main/telnet/: ble_gatt_svr.c  module_telnet.c  module_telnet.h  telnet.c  telnet_ble.c  telnet_ble.h  telnet_protocal.c  telnet_protocal.h  telnet_protocal_0519.c  telnet_protocal_0519.h  telnet_serial.c  telnet_serial.h  telnet_stdio.c  telnet_stdio.h  telnet_wasm.c  telnet_wasm.h  telnet_ws.c  telnet_ws.h  telnet_ws_projection.c
pc/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  compile-fs.js  http_lws.c  http_lws.h  main.c  readme.md  repl.c  repl.h  run.fish  test.js
pc/rom/: unzip.fish
pc/src/: _module_gameplayer.h  beapi.simulate.js  jpge.cpp  main.c  simulate.c  simulate.h  to_jpg.cpp  yuv.c
pc/telweb/: http-static.js  main.js
pc/telweb/public/: index.html
pc/tmp/: xxx.pcm  卡农.mid  孤勇者.mid  献给爱丽丝.mid
wasm/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  config.env
wasm/beshell/: .gitignore  CMakeLists.txt  Makefile  README.md  index.html  wasm_wrapper.cmake
wasm/beshell/src/: _module_gameplayer.c  (+5 more)
wasm/config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
wasm/lvgl/: CMakeLists.txt  Makefile  README.md  kconfigs.in  kconfigs_projbuild.in  wasm_wrapper.cmake
wasm/src/: api.c  api_style.c  callback.c  const_mapping.c  index.html  lvgl.js  lvgl.ts  struct_wrapper.c  test.js
wasm/wasm_base_env/: Makefile  readme.md  wsam_base_env.js  wsam_base_env.src.js  wsam_base_env.wasm
(+546 files in other folders)
